k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-dashboard
  namespace: default
  labels:
    app: iot-dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iot-dashboard
  template:
    metadata:
      labels:
        app: iot-dashboard
    spec:
      containers:
      - name: iot-dashboard
        image: ankittripathi100/iot-dashboard  # Replace with updated Docker registry, if any.
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
