k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-dashboard
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: iot-dashboard
