k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-dashboard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: atripathi.tech  # Update this domain.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-dashboard
            port:
              number: 80
